--- a/client/src/styles/css/globals.css
+++ b/client/src/styles/css/globals.css
@@ -2,8 +2,16 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+body[dir=rtl] {
+  font-family: "IranSans" !important;
+}
+@font-face {
+  font-family: "IranSans";
+  font-style: normal;
+  src: url("/fonts/IRANSansWeb(FaNum).eot");
+  src: url("/fonts/IRANSansWeb(FaNum).eot?#iefix") format("embedded-opentype") /* IE6-IE8 */, url("/fonts/IRANSansWeb(FaNum).woff2") format("woff2"), url("/fonts/IRANSansWeb(FaNum).woff") format("woff"), url("/fonts/IRANSansWeb(FaNum).ttf") format("truetype");
 }
 
 a {
