--- a/client/src/styles/css/globals.css
+++ b/client/src/styles/css/globals.css
@@ -47,3 +47,9 @@ a {
   display: flex;
   justify-content: flex-start;
 }
+.MuiTypography-root{
+  font-family: 'Inter', 'sans-serif', '-apple-system', 'BlinkMacSystemFont', '"Segoe UI"', 'Roboto', '"Helvetica Neue"', 'Arial', 'sans-serif', '"Apple Color Emoji"', '"Segoe UI Emoji"', '"Segoe UI Symbol"'
+}
+[dir=rtl] .MuiTypography-root{
+  font-family: 'IranSans'
+}
